--- a/symlinks/conf.yaml
+++ b/symlinks/conf.yaml
@@ -13,3 +13,4 @@
     ~/.zlogin: shell/zsh/.zlogin
     ~/.zshenv: shell/zsh/.zshenv
     ~/.zshrc: shell/zsh/.zshrc
+    ~/.gitconfig: git/.gitconfig
